report stat api return data modified.
